# Adapters_lib

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/Ranges/: CMakeLists.txt  Concepts.hpp  Drop.hpp  Filter.hpp  Keys.hpp  Ranges.cpp  Ranges.hpp  Reverse.hpp  Take.hpp  Transform.hpp  Values.hpp
tests/: CMakeLists.txt  tests.cpp
